Click listener implemented in listing to take to product detail page with relevant product data

--- a/app/src/main/res/layout/item_product_layout.xml
+++ b/app/src/main/res/layout/item_product_layout.xml
@@ -66,7 +66,7 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:drawable/arrow_down_float"
+        android:background="@drawable/ic_round_arrow_forward_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
